tests/e2e/macros/procedural/custom/v1/snapshots/e2e__macros__procedural__custom__v1__derive_simple.snap
---
source: tests/e2e/macros/procedural/custom/v1/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros\" }\n\n// → test_package/src/lib.cairo\n#[derive(SimpleDeriveMacro)]\nstruct EmptyStruct {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(SimpleDeriveMacro)]
#[derive(Simple<caret>DeriveMacro)]
struct Empty<caret>Struct {}
struct EmptyStruct {<caret>}
"""
generated_code = """
#[derive(SimpleDeriveMacro)]
struct EmptyStruct {}
//-----
trait MyTrait<T> {
    fn foo(t: T);
}
//-----
impl MyTraitImpl of MyTrait<felt252> {
    fn foo(t: felt252) {}
}
"""
