tests/e2e/macros/procedural/custom/v1/snapshots/e2e__macros__procedural__custom__v1__inline_improper.snap
---
source: tests/e2e/macros/procedural/custom/v1/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros\" }\n\n// → test_package/src/lib.cairo\nfn foo() {\n    let _x = improper_inline_macro!(10 + 10);\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
    let _x = improper<caret>_inline_macro!(10 + 10);
    let _x = improper_inline_macro!(10 +<caret> 10);
"""
generated_code = """
unbound_identifier
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: improper_inline_macro!(10 + 10)
    diagnostic:
      range:
        start:
          line: 1
          character: 13
        end:
          line: 1
          character: 44
      severity: 1
      code: E0006
      message: Identifier not found.
      relatedInformation:
      - location:
          uri: vfs://inline_proc_macro.cairo
          range:
            start:
              line: 0
              character: 0
            end:
              line: 0
              character: 18
        message: Diagnostic mapped from here.
