tests/e2e/macros/procedural/custom/v1/snapshots/e2e__macros__procedural__custom__v1__spanless_diagnostic_of_second_derive.snap
---
source: tests/e2e/macros/procedural/custom/v1/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros = { path = \"/scarb_procedural_macros\" }\n\n// → test_package/src/lib.cairo\n#[derive(SimpleDeriveMacro, ErrorDeriveMacro)]\nstruct NoDebug {\n    x: u32,\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive(SimpleDeriveMacro, ErrorDeriveMacro)]<caret>
"""
generated_code = """
#[derive(SimpleDeriveMacro, ErrorDeriveMacro)]
struct NoDebug {
    x: u32,
}
trait MyTrait<T> {
    fn foo(t: T);
}

impl MyTraitImpl of MyTrait<felt252> {
    fn foo(t: felt252) {}
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: SimpleDeriveMacro
    diagnostic:
      range:
        start:
          line: 0
          character: 9
        end:
          line: 0
          character: 26
      severity: 1
      code: E2200
      message: 'Plugin diagnostic: Error from procedural macro'
